[gd_scene load_steps=3 format=3 uid="uid://djgggyx8m0xd"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_gboi5"]
[ext_resource type="PackedScene" uid="uid://cuhq7pm1lhhks" path="res://OptionMenu.tscn" id="2_s4a7s"]

[node name="ColorRect" type="ColorRect"]
process_mode = 3
z_index = 5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.0
offset_top = -277.0
offset_right = 277.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0864, 0.32, 0.32, 1)
script = ExtResource("1_gboi5")

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -628.0
offset_top = -375.0
offset_right = 628.0
offset_bottom = 375.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.95, 1, 0.0705882)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -163.0
offset_right = 139.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="ColorRect" parent="." instance=ExtResource("2_s4a7s")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 554.0
offset_bottom = 554.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="closedOptions" from="ColorRect" to="." method="_on_color_rect_closed_options"]
